kubernetes/apps/kfserving/examples/sklearn/envoy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: mcrt-2788965f-9153-49d2-a14f-f2d163b78c70
    ingress.kubernetes.io/backends: '{"k8s-be-30736--0dc38f3513e161d6":"Unknown","k8s-be-31380--0dc38f3513e161d6":"Unknown"}'
    ingress.kubernetes.io/forwarding-rule: k8s-fw-istio-system-envoy-ingress--0dc38f3513e161d6
    ingress.kubernetes.io/https-forwarding-rule: k8s-fws-istio-system-envoy-ingress--0dc38f3513e161d6
    ingress.kubernetes.io/https-target-proxy: k8s-tps-istio-system-envoy-ingress--0dc38f3513e161d6
    ingress.kubernetes.io/ssl-cert: mcrt-2788965f-9153-49d2-a14f-f2d163b78c70
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/target-proxy: k8s-tp-istio-system-envoy-ingress--0dc38f3513e161d6
    ingress.kubernetes.io/url-map: k8s-um-istio-system-envoy-ingress--0dc38f3513e161d6
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/ssl-redirect":"true","kubernetes.io/ingress.global-static-ip-name":"yjkim-kubeflow-gui-ip","networking.gke.io/managed-certificates":"gke-certificate"},"labels":{"app.kubernetes.io/component":"iap-ingress","app.kubernetes.io/instance":"iap-ingress-v1.0.0","app.kubernetes.io/managed-by":"kfctl","app.kubernetes.io/name":"iap-ingress","app.kubernetes.io/part-of":"kubeflow","app.kubernetes.io/v [...]
    kubernetes.io/ingress.global-static-ip-name: yjkim-kubeflow-gui-ip
    networking.gke.io/managed-certificates: gke-certificate
  creationTimestamp: "2020-05-07T08:48:06Z"
  generation: 1
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: iap-ingress
  name: envoy-ingress
  namespace: istio-system
  resourceVersion: "1033019"
  selfLink: /apis/extensions/v1beta1/namespaces/istio-system/ingresses/envoy-ingress
  uid: 78400576-903f-11ea-9ed9-42010a8a00fd
spec:
  rules:
  - host: yjkim-kubeflow-gui.endpoints.ds-ai-platform.cloud.goog
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
status:
  loadBalancer:
    ingress:
    - ip: 34.107.239.103
